# ean_est_python_2024

./: Readme.md  datos.txt  pyproject.toml
Codigos/: Mi_primer_cuaderno.ipynb  Relación entre minutos usados e ingreso de clientes - Introducción a Pandas.ipynb
